--- a/index.html
+++ b/index.html
@@ -10,36 +10,31 @@
             margin: 0;
             padding: 0;
         }
-        header{
+        header {
             background-color: #800008;
             padding: 2rem;
             color: white;
         }
-        main{
+        main {
             margin: 2rem;
         }
-
         h1, h2 {
             text-align: center;
         }
-
         table {
             width: 60%;
             border-collapse: collapse;
             margin: 20px auto;
             font-size: 18px;
         }
-
         th, td {
             padding: 10px;
             text-align: left;
             border: 1px solid #ddd;
         }
-
         th {
             background-color: #f2f2f2;
         }
-
         input {
             width: 100%;
             padding: 8px;
@@ -47,7 +42,6 @@
             box-sizing: border-box;
             font-size: 16px;
         }
-
         button {
             display: block;
             margin: 20px auto;
@@ -59,28 +53,23 @@
             border-radius: 8px;
             cursor: pointer;
         }
-
         button:hover {
             background-color: #265e28;
         }
-
         .schedule-output {
             margin: 20px auto;
             font-size: 18px;
             text-align: center;
         }
-
         #schedule-table {
             margin-top: 20px;
         }
-
         #room-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
             gap: 10px;
             margin-top: 30px;
         }
-
         .room-cell {
             border: 2px solid #ddd;
             padding: 10px;
@@ -92,33 +81,27 @@
             flex-direction: column;
             justify-content: space-between;
         }
-
         .room-cell.filled {
             background-color: #c8e6c9;
             color: #388e3c;
         }
-
         .room-cell.empty {
             background-color: #ffebee;
             color: #d32f2f;
         }
-
         .room-info {
             font-size: 14px;
             padding: 5px;
             text-align: left;
         }
-
         .room-info ul {
             padding-left: 15px;
             text-align: left;
         }
-
         .room-info ul li {
             list-style-type: disc;
             margin-bottom: 5px;
         }
-
         .vacancy-info {
             margin-top: 20px;
             text-align: center;
@@ -126,6 +109,7 @@
             font-size: 18px;
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
 </head>
 <body>
 
@@ -155,9 +139,9 @@
             <h2>Results</h2>
             <button id="optimize">Optimize Allocation</button>
             <div id="results"></div>
-
             <div id="room-grid"></div>
             <div class="vacancy-info" id="vacancy-info"></div>
+            <button id="exportExcel">Export to Excel</button>
         </section>
     </main>
 
@@ -166,6 +150,7 @@
             const form = document.getElementById("allocation-form");
             const generateBtn = document.getElementById("generate");
             const optimizeBtn = document.getElementById("optimize");
+            const exportExcelBtn = document.getElementById("exportExcel");
             const scheduleTable = document.getElementById("schedule-table");
             const resultsDiv = document.getElementById("results");
             const roomGrid = document.getElementById("room-grid");
@@ -213,24 +198,6 @@
                 });
             });
 
-            // Calculate available times
-            function calculateAvailableTimes(allocatedTimes, allocatedDays) {
-                const allTimes = [
-                    { time: "8:00-9:00", days: ["MWF", "TTh"] },
-                    { time: "9:00-10:00", days: ["MWF", "TTh"] },
-                    { time: "10:00-11:00", days: ["MWF", "TTh"] },
-                    { time: "11:00-12:00", days: ["MWF", "TTh"] },
-                    { time: "12:00-1:00", days: ["MWF", "TTh"] },
-                    { time: "1:00-2:00", days: ["MWF", "TTh"] },
-                    { time: "2:00-3:00", days: ["MWF", "TTh"] },
-                    { time: "3:00-4:00", days: ["MWF", "TTh"] }
-                ];
-
-                return allTimes.filter(slot => 
-                    !allocatedTimes.includes(slot.time) && !allocatedDays.some(day => slot.days.includes(day))
-                );
-            }
-
             // Optimize allocation
             optimizeBtn.addEventListener("click", () => {
                 if (!rooms || !instructorSchedule || instructorSchedule.length === 0) {
@@ -238,56 +205,45 @@
                     return;
                 }
 
-                // Basic allocation
                 const roomAllocation = Array.from({ length: rooms }, () => []);
                 const timeBlocks = Array.from({ length: rooms }, () => []);
                 const daysAllocated = Array.from({ length: rooms }, () => []);
 
-                instructorSchedule.sort((a, b) => {
-                    // Sort by start time of instructor
-                    return a.time.localeCompare(b.time);
-                });
+                instructorSchedule.sort((a, b) => a.time.localeCompare(b.time));
 
-                let remainingInstructors = [...instructorSchedule]; // Track remaining instructors for room allocation
+                let remainingInstructors = [...instructorSchedule];
 
-                // First pass: Assign rooms to instructors
                 remainingInstructors.forEach(instructor => {
-                    const availableRoom = roomAllocation.find((room, index) => room.length === 0);
+                    const availableRoom = roomAllocation.find(room => room.length === 0);
                     if (availableRoom) {
                         availableRoom.push(instructor);
-                        const roomIndex = roomAllocation.indexOf(availableRoom);
-                        timeBlocks[roomIndex].push(instructor.time);
-                        daysAllocated[roomIndex].push(instructor.days);
                     }
                 });
 
-                // Second pass: If there are still unassigned instructors, start sharing rooms
-                remainingInstructors = remainingInstructors.filter(instructor => !roomAllocation.some(room => room.includes(instructor)));
-                
+                remainingInstructors = remainingInstructors.filter(instructor => 
+                    !roomAllocation.some(room => room.includes(instructor))
+                );
+
                 remainingInstructors.forEach(instructor => {
-                    // Try to find a room that has a vacant time slot for the instructor
                     let assigned = false;
                     for (let i = 0; i < rooms; i++) {
                         if (!timeBlocks[i].includes(instructor.time) && !daysAllocated[i].includes(instructor.days)) {
                             roomAllocation[i].push(instructor);
-                            timeBlocks[i].push(instructor.time);
-                            daysAllocated[i].push(instructor.days);
                             assigned = true;
                             break;
                         }
                     }
-                    // If an instructor cannot be assigned to an existing room, they should be placed in a new room
                     if (!assigned) {
                         const newRoomIndex = roomAllocation.findIndex(room => room.length === 0);
                         if (newRoomIndex !== -1) {
                             roomAllocation[newRoomIndex].push(instructor);
-                            timeBlocks[newRoomIndex].push(instructor.time);
-                            daysAllocated[newRoomIndex].push(instructor.days);
                         }
                     }
                 });
 
-                // Display results
+                // Save room allocation to localStorage
+                localStorage.setItem("roomAllocation", JSON.stringify(roomAllocation));
+
                 roomGrid.innerHTML = '';
                 roomAllocation.forEach((room, idx) => {
                     const roomCell = document.createElement('div');
@@ -301,24 +257,57 @@
                     } else {
                         roomCell.classList.add('empty');
                         roomCell.innerHTML = `<strong>Room ${idx + 1}</strong><br/>Vacant`;
-
-                        const availableTimes = calculateAvailableTimes(timeBlocks[idx], daysAllocated[idx]);
-                        const availableTimesHTML = availableTimes.map(slot => 
-                            `<li>${slot.time} (${slot.days.join(", ")})</li>`).join('');
-                        roomCell.innerHTML += `
-                            <div class="room-info">
-                                <strong>Available Times:</strong>
-                                <ul>${availableTimesHTML}</ul>
-                            </div>
-                        `;
                     }
                     roomGrid.appendChild(roomCell);
                 });
 
-                // Show vacancy info
                 const vacantRooms = roomAllocation.filter(room => room.length === 0).length;
                 vacancyInfo.innerHTML = `<strong>Vacant Rooms:</strong> ${vacantRooms}`;
             });
+
+            // Export to Excel
+            exportExcelBtn.addEventListener("click", () => {
+                const roomAllocation = JSON.parse(localStorage.getItem("roomAllocation"));
+                if (!roomAllocation) {
+                    alert("No room allocation data available.");
+                    return;
+                }
+
+                const ws = XLSX.utils.table_to_sheet(createExcelTable(roomAllocation));
+                const wb = XLSX.utils.book_new();
+                XLSX.utils.book_append_sheet(wb, ws, "Room Allocation");
+                XLSX.writeFile(wb, "Room_Allocation.xlsx");
+            });
+
+            // Create table for Excel export
+            function createExcelTable(roomAllocation) {
+                const table = document.createElement("table");
+                table.innerHTML = `
+                    <thead>
+                        <tr>
+                            <th>Room</th>
+                            <th>Instructor</th>
+                            <th>Time</th>
+                            <th>Days</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                `;
+
+                roomAllocation.forEach((room, roomIdx) => {
+                    room.forEach(instructor => {
+                        const row = document.createElement("tr");
+                        row.innerHTML = `
+                            <td>${roomIdx + 1}</td>
+                            <td>Instructor ${instructor.id}</td>
+                            <td>${instructor.time}</td>
+                            <td>${instructor.days}</td>
+                        `;
+                        table.querySelector("tbody").appendChild(row);
+                    });
+                });
+                return table;
+            }
         });
     </script>
 
